removed gem react-sinatra + uglifyjs in webpack

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Pidgeon Army</title>
-  <!--[if lt IE 9]>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js"></script>
-  <![endif]-->
-</head>
-<body>
-<div class="container">
-  <%= yield %>
-</div>
-</body>
+  <head>
+    <title>Pidgeon Army</title>
+    <!--[if lt IE 9]>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="text/javascript" src="/react_dist/bundle.js" defer></script>
+  </body>
 </html>
