manage contact page started

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,7 +7,7 @@
     <![endif]-->
   </head>
   <body>
-    <div id="root"></div>
+    <%= yield %>
     <script type="text/javascript" src="/react_dist/bundle.js" defer></script>
   </body>
 </html>
